--- a/index.html
+++ b/index.html
@@ -6,9 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Favorite Favorites</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
+    <!-- Navigation Pane -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" active>Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Ryan's Favorite Favorites</h1>
+        <p>Here are some of my favorite favorite things:</p>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
+            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
+            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
+            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
+            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>Created by Ryan</p>
+    </footer>
 
 </body>
 
