--- a/drinks.html
+++ b/drinks.html
@@ -11,12 +11,15 @@
 </head>
 
 <body>
+    <div class="skip">
+        <a tabindex="0" href="#main">Skip to Main Content</a>
+    </div>
     <!-- Navigation Pane -->
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="drinks.html" active>Drinks</a></li>
+                <li><a href="drinks.html" class="onpage">Drinks</a></li>
                 <li><a href="sports.html">Sports</a></li>
             </ul>
         </nav>
