--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 </head>
 
 <body>
+    <div class="skip">
+        <a tabindex="0" href="#main">Skip to Main Content</a>
+    </div>
     <!-- Navigation Pane -->
     <header>
         <nav>
             <ul>
-                <li><a href="index.html" active>Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class="onpage">Home</a></li>
+                <li><a href="drinks.html">Drinks</a></li>
+                <li><a href="sports.html">Sports</a></li>
             </ul>
         </nav>
     </header>
