--- a/sports.html
+++ b/sports.html
@@ -11,13 +11,16 @@
 </head>
 
 <body>
+    <div class="skip">
+        <a tabindex="0" href="#main">Skip to Main Content</a>
+    </div>
     <!-- Navigation Pane -->
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="drinks.html">Drinks</a></li>
-                <li><a href="sports.html" active>Sports</a></li>
+                <li><a href="sports.html" class="onpage">Sports</a></li>
             </ul>
         </nav>
     </header>
