--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Favorite Favorites</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
@@ -17,11 +17,9 @@
     <!-- Navigation Pane -->
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html" class="onpage">Home</a></li>
-                <li><a href="drinks.html">Drinks</a></li>
-                <li><a href="sports.html">Sports</a></li>
-            </ul>
+            <a href="index.html" class="button onpage">Home</a>
+            <a href="drinks.html" class="button">Drinks</a>
+            <a href="sports.html" class="button">Sports</a>
         </nav>
     </header>
 
