--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
 
     <main>
         <h1>Ryan's Favorite Favorites</h1>
-        <p>Here are some of my favorite favorite things:</p>
-        <ul>
-            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
-            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
-            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
-            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
-            <li><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">The Office</a></li>
-        </ul>
+        <p>Here are some of my favorite favorite things! </p>
+
     </main>
 
     <footer>
