--- a/drinks.html
+++ b/drinks.html
@@ -25,6 +25,62 @@
 
     <main>
         <h1>Ryan's Favorite Drinks</h1>
+        <p>
+            Here are some of my favorite drinks, in no particualr order! I love to drink them, and I love to order them
+            at restaurants!
+        </p>
+        <div class="tiles1">
+            <figure class="tile1">
+                <img src="img/orange_juice.jpeg" alt="Two glasses of fresh-squeezed orange juice">
+                <figcaption>Fresh-Squeezed Orange Juice</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="img/chai_tea.webp" alt="A chai tea latte in a glass on a green background">
+                <figcaption>Chai Tea Latte</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="img/hot_chocolate.jpg"
+                    alt="A glass mug of hot chocolate with peppermint flakes on the whipped cream">
+                <figcaption>Peppermint Hot Chocolate</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="img/egg_nog.png" alt="A glass of egg nog on a countertop with cinnamon sprinkled on top">
+                <figcaption>Cinnamon Egg Nog</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="img/shirley_temple.jpg" alt="Shirley Temple in a glass with leaves coming out">
+                <figcaption>Shirley Temple</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="" alt="">
+                <figcaption>Root Beer</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="" alt="">
+                <figcaption>Cream Soda</figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile1">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+        </div>
 
     </main>
 
