--- a/sports.html
+++ b/sports.html
@@ -25,7 +25,57 @@
 
     <main>
         <h1>Ryan's Favorite Sports</h1>
+        <div class="tiles">
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
 
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+
+            <figure class="tile">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+        </div>
     </main>
 
     <footer>
