--- a/drinks.html
+++ b/drinks.html
@@ -57,28 +57,28 @@
             </figure>
 
             <figure class="tile1">
-                <img src="" alt="">
+                <img src="img/root_beer.webp" alt="A large glass of bubbly root beer">
                 <figcaption>Root Beer</figcaption>
             </figure>
 
             <figure class="tile1">
-                <img src="" alt="">
+                <img src="img/cream_soda.png" alt="A chilled glass of cream soda">
                 <figcaption>Cream Soda</figcaption>
             </figure>
 
             <figure class="tile1">
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="img/protein_shake.jpeg" alt="A top-down view of a vanilla protein shake on a countertop">
+                <figcaption>Vanilla Protein Shake</figcaption>
             </figure>
 
             <figure class="tile1">
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="img/vitamin_water.jfif" alt="A kiwi-strawberry flavored vitamin water">
+                <figcaption>Kiwi Strawberry Vitamin Water</figcaption>
             </figure>
 
             <figure class="tile1">
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="img/water.jpg" alt="A short glass of overflowing ice water">
+                <figcaption>Water</figcaption>
             </figure>
         </div>
 
