--- a/sports.html
+++ b/sports.html
@@ -25,55 +25,60 @@
 
     <main>
         <h1>Ryan's Favorite Sports</h1>
-        <div class="tiles">
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+        <p>
+            Here are some of my favorite sports, in no particular order! I love to watch them, although there is nothing
+            like playing them!
+        </p>
+        <div class="tiles2">
+            <figure class="tile2">
+                <img src="img/hockey.png" alt="The creator of this website playing hockey">
+                <figcaption>Hockey</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/tennis.jfif" alt="Novak Djokovic celebrating while playing tennis">
+                <figcaption>Tennis</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/vball.jfif" alt="Two blockers jumping up to block a hitter">
+                <figcaption>Volleyball</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/table_tennis.png" alt="Table tennis match in the Rio Olympic Games">
+                <figcaption>Table Tennis</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/formula_one.jfif" alt="Diagonal profile of a Red Bull Formula One car">
+                <figcaption>Formula One</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/ski_jumping.jpg" alt="Ski jumper flying through the air">
+                <figcaption>Ski Jumping</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/mountain_biking.jpg"
+                    alt="A father and his son riding down a deciduous forest mountain bike trail">
+                <figcaption>Mountain Biking</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/beach_volleyball.jpeg" alt="A beach volleyball resting on the sand">
+                <figcaption>Beach Volleyball</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/baseball.jpg" alt="Major League Baseball player swinging a bat at a baseball">
+                <figcaption>Baseball</figcaption>
             </figure>
 
-            <figure class="tile">
-                <img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="tile2">
+                <img src="img/golf.webp" alt="A golf ball resting on a tee in the grass">
+                <figcaption>Golf</figcaption>
             </figure>
         </div>
     </main>
