--- a/drinks.html
+++ b/drinks.html
@@ -85,7 +85,7 @@
     </main>
 
     <footer>
-        <p>Created by Ryan</p>
+        <div class="footer_text">Created by Ryan</div>
     </footer>
 
 </body>
