--- a/sports.html
+++ b/sports.html
@@ -75,16 +75,11 @@
                 <img src="img/baseball.jpg" alt="Major League Baseball player swinging a bat at a baseball">
                 <figcaption>Baseball</figcaption>
             </figure>
-
-            <figure class="tile2">
-                <img src="img/golf.webp" alt="A golf ball resting on a tee in the grass">
-                <figcaption>Golf</figcaption>
-            </figure>
         </div>
     </main>
 
     <footer>
-        <p>Created by Ryan</p>
+        <div class="footer_text">Created by Ryan</div>
     </footer>
 
 </body>
