--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <p>Created by Ryan</p>
+        <div class="footer_text">Created by Ryan</div>
     </footer>
 
 </body>
