--- a/drinks.html
+++ b/drinks.html
@@ -26,7 +26,7 @@
     <main>
         <h1>Ryan's Favorite Drinks</h1>
         <p>
-            Here are some of my favorite drinks, in no particualr order! I love to drink them, and I love to order them
+            Here are some of my favorite drinks, in no particular order! I love to drink them, and I love to order them
             at restaurants!
         </p>
         <div class="tiles1">
