--- a/sports.html
+++ b/sports.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Favorite Favorites</title>
+    <!-- <link rel="stylesheet" href="css/html5reset.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
