--- a/drinks.html
+++ b/drinks.html
@@ -6,77 +6,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Favorite Favorites</title>
+    <!-- <link rel="stylesheet" href="css/html5reset.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
-    <div class="skip">
-        <a tabindex="0" href="#main">Skip to Main Content</a>
-    </div>
-    <!-- Navigation Pane -->
     <header>
-        <nav>
-            <a href="index.html" class="button">Home</a>
-            <a href="drinks.html" class="button onpage">Drinks</a>
-            <a href="sports.html" class="button">Sports</a>
+        <div class="skip">
+            <a tabindex="0" href="#main">Skip to Main Content</a>
+        </div>
+
+        <nav class="navbar navbar-dark navbar-expand-sm bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Fav Favs</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="drinks.html"><strong>Drinks</strong></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sports.html">Sports</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
     <main>
-        <h1>Ryan's Favorite Drinks</h1>
-        <p>
+        <h1 class="display-3 m-5 text-center" tabindex="0">Ryan's Favorite Drinks</h1>
+        <p class="fs-5 m-5" tabindex="0">
             Here are some of my favorite drinks, in no particular order! I love to drink them, and I love to order them
             at restaurants!
         </p>
         <div class="tiles1">
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/orange_juice.jpeg" alt="Two glasses of fresh-squeezed orange juice">
                 <figcaption>Fresh-Squeezed Orange Juice</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/chai_tea.webp" alt="A chai tea latte in a glass on a green background">
                 <figcaption>Chai Tea Latte</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/hot_chocolate.jpg"
                     alt="A glass mug of hot chocolate with peppermint flakes on the whipped cream">
                 <figcaption>Peppermint Hot Chocolate</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/egg_nog.png" alt="A glass of egg nog on a countertop with cinnamon sprinkled on top">
                 <figcaption>Cinnamon Egg Nog</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/shirley_temple.jpg" alt="Shirley Temple in a glass with leaves coming out">
                 <figcaption>Shirley Temple</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/root_beer.webp" alt="A large glass of bubbly root beer">
                 <figcaption>Root Beer</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/cream_soda.png" alt="A chilled glass of cream soda">
                 <figcaption>Cream Soda</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/protein_shake.jpeg" alt="A top-down view of a vanilla protein shake on a countertop">
                 <figcaption>Vanilla Protein Shake</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/vitamin_water.jfif" alt="A kiwi-strawberry flavored vitamin water">
                 <figcaption>Kiwi Strawberry Vitamin Water</figcaption>
             </figure>
 
-            <figure class="tile1">
+            <figure class="tile1" tabindex="0">
                 <img src="img/water.jpg" alt="A short glass of overflowing ice water">
                 <figcaption>Water</figcaption>
             </figure>
@@ -85,7 +110,7 @@
     </main>
 
     <footer>
-        <div class="footer_text">Created by Ryan</div>
+        <div class="footer_text" tabindex="0">Created by Ryan</div>
     </footer>
 
 </body>
