--- a/index.html
+++ b/index.html
@@ -6,31 +6,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Favorite Favorites</title>
+    <!-- <link rel="stylesheet" href="css/html5reset.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
-    <div class="skip">
-        <a tabindex="0" href="#main">Skip to Main Content</a>
-    </div>
-    <!-- Navigation Pane -->
     <header>
-        <nav>
-            <a href="index.html" class="button onpage">Home</a>
-            <a href="drinks.html" class="button">Drinks</a>
-            <a href="sports.html" class="button">Sports</a>
+        <div class="skip">
+            <a tabindex="0" href="#main">Skip to Main Content</a>
+        </div>
+
+        <nav class="navbar navbar-dark navbar-expand-sm bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Fav Favs</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html"><strong>Home</strong></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="drinks.html">Drinks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sports.html">Sports</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
     <main>
-        <h1>Ryan's Favorite Favorites</h1>
-        <p>Here are some of my favorite favorite things!</p>
+        <h1 class="display-3 m-5 text-center" tabindex="0">Ryan's Favorite Favorites</h1>
+        <div class="card text-bg-secondary border-primary m-auto mt-5 mb-5" style="max-width: 540px;" tabindex="0">
+            <img src="img/ryan.png" class="card-img-top" alt="Ryan, the creator of this website">
+            <div class="card-body">
+                <h5 class="card-title">About Me</h5>
+                <p class="card-text">I am a senior in computer science engineering and a lifelong fan of cool drinks and
+                    fun sports.</p>
+            </div>
+        </div>
+        <p class="fs-5 m-5" tabindex="0">Welcome to my website, where I share my favorite of my favorite things with the
+            world! This
+            site is a celebration of some of the things that bring me joy in my daily life.<br><br>
+
+            As a lifelong fan of cool drinks and fun sports, I've spent countless hours meticulously curating my library
+            of favorite favorites. This website is a way for me to share my passion with others.<br><br>
+
+            Whether you're looking for a new drink to taste or a new sport to watch, I've got you covered.<br><br>
+
+            <strong>So take a look around, explore the site, and discover some new favorites of your own!</strong>
+        </p>
 
     </main>
 
     <footer>
-        <div class="footer_text">Created by Ryan</div>
+        <div class="footer_text" tabindex="0">Created by Ryan</div>
     </footer>
 
 </body>
